tests/exposure_test_real_namespace_with_matching_pod/namespaces_and_deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    x: xval
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-in-ns1
  namespace: ns1
  labels:
    app: app-1
spec:
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: ns-1
        image: quay.io/shfa/ns1:latest
        ports:
        - containerPort: 9090
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-pod-in-ns1
  namespace: ns1
  labels:
    app: foo
spec:
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: ns-1-foo
        image: quay.io/shfa/ns1:latest
        ports:
        - containerPort: 9090
        - containerPort: 8080
